Wed Dec 09 03:19:39 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Add a preliminary set of classes
	  for representing the results of reading the cache in a form
	  suitable for use in search results.

Wed Dec 09 03:18:39 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Add support for storing the queryid for a cached
	  query in the Query object.

Wed Dec 09 01:04:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt: Be less susceptible
	  to garbage collection timing.

Tue Dec 08 12:29:52 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt,
	  xappy/mset_search_results.py,xappy/searchconnection.py,
	  xappy/searchresults.py: Pull out the mset-specific code for
	  search results into mset_search_results.py

Tue Dec 08 11:49:10 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py: Factor out
	  facet information to a MSetFacetResults object.

Tue Dec 08 11:17:20 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py: Refactor
	  getting result stats into a separate object.

Tue Dec 08 10:54:27 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py,xappy/utils.py:
	  Move add_to_dict_of_dicts() into utils.py.  Add
	  SearchResultContext, used to bundle up all the resources that a
	  SearchResult object might need.

Tue Dec 08 09:25:54 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/: Split get_significant_digits into separate utility
	  function, in new "utils.py" file.  Refactor SearchResults
	  reordering stuff to use a MSetResultOrdering or
	  ReorderedMSetResultOrdering object to control get_hits and iter:
	  removes the _mset_order member from SearchResults.  Working
	  towards removing the _mset member, too.
